clusters/rainbow/apps/adguard-home/istio-config.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: adguard-home
  namespace: vpn
spec:
  hosts:
  - "adguard.tuckerthomas.com"
  gateways:
  - istio-ingress/vpn-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: adguard-home.vpn.svc.cluster.local
