clusters/rainbow/apps/adguard-home/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-home
  namespace: vpn

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.tuckerthomas.com`)
      kind: Rule
      services:
        - kind: Service
          name: adguard-home
          namespace: vpn
          port: 3000
  tls:
    secretName: vpn-apps-cert-prod
    domains:
      - main: adguard.tuckerthomas.com
